--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=test-embed.html">
+    <meta http-equiv="refresh" content="0; url=youtube-collection.html">
   </head>
 </html>
