Update title in youtube-collection.html

--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1a1a1a">
-    <title>My Video Collection</title>
+    <title>Good Youtube - A project by Ki</title>
     <link rel="manifest" href="manifest.json">
     <style>
         * {
