--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-title" content="Ki's Tube">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1a1a1a">
+    <link rel="apple-touch-icon" href="/icons/icon-192.png">
     <title>Ki's Tube</title>
     <link rel="manifest" href="manifest.json">
     <style>
