Update manifest link in youtube-collection.html

--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#1a1a1a">
     <link rel="apple-touch-icon" href="/icons/icon-192.png">
     <title>Ki's Tube</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/good-youtube/manifest.json">
     <style>
         * {
             margin: 0;
