--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-title" content="Ki's Tube">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1a1a1a">
@@ -31,6 +31,8 @@
             top: 0;
             z-index: 100;
             border-bottom: 1px solid #333;
+            touch-action: manipulation;
+            overscroll-behavior: none;
         }
 
         .header-top {
