Update apple-touch-icon link with new size and path

--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1a1a1a">
-    <link rel="apple-touch-icon" href="/icons/kitube.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/good-youtube//icons/kitube.png">
     <title>Ki's Tube</title>
     <link rel="manifest" href="/good-youtube/manifest.json">
     <style>
