Update service worker registration path

--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -1090,7 +1090,7 @@
 
         // Service Worker registration
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('sw.js').catch(() => {
+            navigator.serviceWorker.register('/good-youtube/sw.js').catch(() => {
                 console.log('Service Worker registration failed');
             });
         }
