Update app title from 'Ki's Tube' to 'KiTube'

--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-title" content="Ki's Tube">
+    <meta name="apple-mobile-web-app-title" content="KiTube">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1a1a1a">
     <link rel="apple-touch-icon" sizes="180x180" href="/good-youtube//icons/kitube.png">
-    <title>Ki's Tube</title>
+    <title>KiTube</title>
     <link rel="manifest" href="/good-youtube/manifest.json">
     <style>
         * {
@@ -438,7 +438,7 @@
 <body>
     <div class="header">
         <div class="header-top">
-            <h1>Ki's Tube</h1>
+            <h1>KiTube</h1>
             <div class="header-buttons">
                 <button class="profile-button" id="signInHeaderButton" style="display: none;">
                     Auth, pls!
