Change user icon to settings gear in auth button

--- a/youtube-collection.html
+++ b/youtube-collection.html
@@ -449,7 +449,7 @@
                 </div>
                 <button class="auth-button-header" id="authButtonHeader" style="display: none;">
                     <span id="userNameHeader"></span>
-                    <span style="margin-left: 4px;">👤</span>
+                    <span style="margin-left: 4px;">⚙️</span>
                 </button>
             </div>
         </div>
